--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-cli",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -11,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^12.1.0"
   }
 }
